add_subdirectory(API)
add_subdirectory(Analysis)
add_subdirectory(CodeGen)
add_subdirectory(Dialect)
add_subdirectory(IR)
add_subdirectory(Interfaces)
add_subdirectory(Support)
add_subdirectory(Target)
add_subdirectory(Transforms)

add_mlir_library(ASTERInit
  Init.cpp

  LINK_LIBS PUBLIC
  AMDGCNDialect
  AMDGCNTransforms
  AsterCodeGenTransforms
  AsterInterfaces
  AsterUpstreamModelsImpl
  AsterUtilsDialect
  AsterUtilsTransforms
  LSIRDialect
  MLIRAffineDialect
  MLIRAffineTransforms
  MLIRArithDialect
  MLIRArithValueBoundsOpInterfaceImpl
  MLIRCAPIIR
  MLIRCastInterfaces
  MLIRControlFlowDialect
  MLIRDLTIDialect
  MLIRFuncDialect
  MLIRFuncInlinerExtension
  MLIRGPUDialect
  MLIRIndexDialect
  MLIRLLVMDialect
  MLIRLLVMIRTransforms
  MLIRMemRefDialect
  MLIRMemRefTransforms
  MLIRPtrDialect
  MLIRSCFDialect
  MLIRUBDialect
  MLIRVectorDialect
)
