add_subdirectory(Interfaces)

set(LLVM_TARGET_DEFINITIONS InstAttr.td)
mlir_tablegen(InstAttr.h.inc -gen-attrdef-decls -dialect=amdgcn)
mlir_tablegen(InstAttr.cpp.inc -gen-attrdef-defs -dialect=amdgcn)
set(LLVM_TARGET_DEFINITIONS AMDGCNTypes.td)
mlir_tablegen(AMDGCNTypes.h.inc -gen-typedef-decls -dialect=amdgcn)
mlir_tablegen(AMDGCNTypes.cpp.inc -gen-typedef-defs -dialect=amdgcn)
set(LLVM_TARGET_DEFINITIONS AMDGCNOps.td)
mlir_tablegen(AMDGCNDialect.h.inc -gen-dialect-decls -dialect=amdgcn)
mlir_tablegen(AMDGCNDialect.cpp.inc -gen-dialect-defs -dialect=amdgcn)
mlir_tablegen(AMDGCNAttrs.h.inc -gen-attrdef-decls -dialect=amdgcn)
mlir_tablegen(AMDGCNAttrs.cpp.inc -gen-attrdef-defs -dialect=amdgcn)
mlir_tablegen(AMDGCNOps.h.inc -gen-op-decls)
mlir_tablegen(AMDGCNOps.cpp.inc -gen-op-defs)
set(LLVM_TARGET_DEFINITIONS Instructions/VOP.td)
mlir_tablegen(VOP.h.inc -gen-op-decls)
mlir_tablegen(VOP.cpp.inc -gen-op-defs)
amdgcn_tablegen(VOPInst.cpp.inc -gen-inst-methods)
add_public_tablegen_target(AMDGCNOpsIncGen)

set(LLVM_TARGET_DEFINITIONS AMDGCNOps.td)
amdgcn_tablegen(AMDGCNInsts.h.inc -gen-inst-decls)
amdgcn_tablegen(AMDGCNInsts.cpp.inc -gen-inst-defs)
set(LLVM_TARGET_DEFINITIONS AMDGCNInsts.td)
mlir_tablegen(AMDGCNEnums.h.inc -gen-enum-decls)
mlir_tablegen(AMDGCNEnums.cpp.inc -gen-enum-defs)
add_public_tablegen_target(AMDGCNInstsIncGen)
