add_subdirectory(Interfaces)

set(LLVM_TARGET_DEFINITIONS AMXOps.td)
mlir_tablegen(AMXDialect.h.inc -gen-dialect-decls -dialect=amx)
mlir_tablegen(AMXDialect.cpp.inc -gen-dialect-defs -dialect=amx)
mlir_tablegen(AMXTypes.h.inc -gen-typedef-decls -typedefs-dialect=amx)
mlir_tablegen(AMXTypes.cpp.inc -gen-typedef-defs -typedefs-dialect=amx)
mlir_tablegen(AMXOps.h.inc -gen-op-decls)
mlir_tablegen(AMXOps.cpp.inc -gen-op-defs)
add_public_tablegen_target(ASTERAMXIncGen)
add_dependencies(ASTERAMXIncGen ASTERAMXAsmOpInterfaceIncGen)
